fixed alignment Abel's page, somebody test this

--- a/abel.css
+++ b/abel.css
@@ -72,7 +72,7 @@ html, body {
 
 .main img{
   margin-top: 3%;
-  margin-left: 400px;
+  margin-left: 10%;
   padding: 0px 10px;
 }
 
@@ -87,9 +87,9 @@ html, body {
 }
 
 .intro p{
-  margin-top: -10%;
-  margin-left: 700px;
-  margin-right: 550px;
+  margin-top: -17%;
+  margin-left: 40%;
+  margin-right: 20%;
   font-family: Arial;
   font-size: 15px;
   color: rgb(255, 255, 255);
@@ -98,8 +98,8 @@ html, body {
 }
 
 .intro h2 {
-  margin-top: -3%;
-  margin-left: 700px;
+  margin-top: -5%;
+  margin-left: 34%;
   margin-right: 250px;
   font-family: Arial;
   font-size: 40px;
@@ -110,8 +110,8 @@ html, body {
 
 .moreAboutMe h2{
   margin-top: 6%;
-  margin-left: 600px;
-  margin-right: 250px;
+  margin-left: 30%;
+  margin-right: 15%;
   font-family: Arial;
   font-size: 40px;
   color: rgb(255, 255, 255);
@@ -121,8 +121,8 @@ html, body {
 
 .moreAboutMe h3{
   margin-top: 10%;
-  margin-left: 650px;
-  margin-right: 250px;
+  margin-left: 33%;
+  margin-right: 15%;
   font-family: Arial;
   font-size: 30px;
   color: rgb(255, 255, 255);
@@ -132,18 +132,18 @@ html, body {
 
 .moreAboutMe p{
   margin-top: 5%;
-  margin-left: 300px;
-  margin-right: 350px;
+  margin-left: 9%;
+  margin-right: 13%;
   font-family: Arial;
-  font-size: 23px;
+  font-size: 20px;
   color: rgb(255, 255, 255);
   position: absolute;
   text-align: left;
 }
 
 .moreAboutMe h4{
-  margin-top: 20%;
-  margin-left: 600px;
+  margin-top: 30%;
+  margin-left: 25%;
   margin-right: 250px;
   font-family: Arial;
   font-size: 30px;
